tests/fixtures/valid/expression_body.lnge
fn square(x: i32) -> i32 = x * x;

fn main() -> i32 {
    return square(5);
}
