tests/fixtures/invalid/immutable_assign.lnge
fn main() -> i32 {
    x : i32 = 5;
    x = 10;
    return x;
}
